--- a/app.css
+++ b/app.css
@@ -1,3 +1,5 @@
+/* 
+project list and people css
 * {
   box-sizing: border-box;
 }
@@ -125,4 +127,20 @@ button:active {
   padding: 1rem;
   border: 1px solid #ff0062;
   background: #f7f7f7;
+} */
+
+#map {
+  width: 90%;
+  height: 20rem;
+  border: 1px solid #ccc;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+form {
+  text-align: center;
+  margin: 2rem auto;
 }
